--- a/pages/resume.html
+++ b/pages/resume.html
@@ -1,11 +1,14 @@
 ---
 layout: layout
-title: "CV"
+title: "resume"
 ---
 
 <section class="content">
   <h1>{{ site.name }}</h1>
 
+  <h3>tl;dr</h3>
+  <p>Seasoned programmer with experience building world-class apps. Lately I've been using Node.js with MongoDB. I have written a search engine in C++, and server apps in Java. </p>
+  
   <h3>Early Experiences</h3>
   <p>Learned to push-up, sit-up, crawl, walk and talk. All self-taught.</p>
   <p>Early exposure to computers was through my father who wrote <a href="http://www.amazon.com/Modular-Programming-Cobol-Business-Processing/dp/0471033251">Modular Programming in COBOL</a> in the early 70's. I got to hang out in the server room, checkout the <a href="http://en.wikipedia.org/wiki/Computer_programming_in_the_punched_card_era">punched cards</a> and play <a href="http://en.wikipedia.org/wiki/Star_Trek_(text_game)">Star Trek</a> on a dial up terminal.</p>
@@ -21,7 +24,7 @@ title: "CV"
   <p>In 1991 I joined Muze as a programmer. At the time I was the second programmer to join the team. We wrote touch-screen kiosks for music stores based on our database of every CD in print. I helped build the music kiosk and then went on to write the backend and kiosk for our video and books systems. The first music kiosk was written in <a href="http://en.wikipedia.org/wiki/Clipper_(programming_language)">Clipper</a>. The video kiosk was written in <a href="http://en.wikipedia.org/wiki/Visual_FoxPro">Foxpro</a>, and the books kiosk was written in <a href="http://en.wikipedia.org/wiki/visual_basic">Visual Basic</a>. I helped build up an awesome team of developers at Muze and it was a great time!
   </p>
   <h3>Barnesandnoble.com (1998-2003)</h3>
-  <p><a href="http://bn.com">bn.com</a> launched in 1997. I joined in 1998 to run the search engine. At the time I joined the entire search engine for the site was an extended stored procedure in SQL Server!! I quickly built a new engine in C and sped up response times by several orders of magnitude. I built up a small team of great developers and we built a second search engine from the ground up in C++. In it's day, I believe it was one of the top site-specific search engines on the web. 
+  <p><a href="http://bn.com">bn.com</a> launched in 1997. I joined in 1998 to run the search engine. At the time I joined the entire search engine for the site was an extended stored procedure in SQL Server!! I quickly built a new engine in C and sped up response times by several orders of magnitude. I built up a small team of great developers, including Jim Korenthal of PHDBase fame, and we built a second search engine from the ground up in C++. In it's day, I believe it was one of the top site-specific search engines on the web. 
   <br/><br/>
   At the time, <a href="http://www.nngroup.com/people/jakob-nielsen/">Jakob Nielsen</a> wrote, <i>“BN is lean and fast. It’s easy to find books here, even if you misspell the author’s name.”</i> Little did he know that I knew he'd review the site, and I knew he'd mis-type his own name to check the results so we made sure that every possible mis-spelling of Jakob and Nielsen returned his books. After I left in 2003 the search engine continued to perform flawlessly for years performing billions of searches.</p>
   <h3>Semandex (2003-2011)</h3>
