switched post from markdown to html

--- a/_posts/2013-09-03-building-my-home-office.html
+++ b/_posts/2013-09-03-building-my-home-office.html
@@ -52,13 +52,13 @@ Here's the outside. All painted.
 <div style="clear:both;margin:15px 0;"/>
 
 Here's the interior color scheme:
+<div>
+<iframe frameborder="0" style="height: 190px; width: 180px; margin-left: 0px;" src="http://www.benjaminmoore.com/bm/colorgallery/embed_color.jsp?colorvalue=rgb%2850%2C%2050%2C%2051%29&colornum=2132-10&colorname=black&colorhref=http://www.benjaminmoore.com/en-us/paint-color/black" id="benjaminMooreIframe"><div style="display:none;"><a href="http://www.benjaminmoore.com/en-us/paint-color/black">black</a></div></iframe>
 
-<iframe frameborder="0" style="height: 190px; width: 190px; margin-left: 0px;" src="http://www.benjaminmoore.com/bm/colorgallery/embed_color.jsp?colorvalue=rgb%2850%2C%2050%2C%2051%29&colornum=2132-10&colorname=black&colorhref=http://www.benjaminmoore.com/en-us/paint-color/black" id="benjaminMooreIframe"><div style="display:none;"><a href="http://www.benjaminmoore.com/en-us/paint-color/black">black</a></div></iframe>
+<iframe frameborder="0" style="height: 190px; width: 180px; margin-left: 0px;" src="http://www.benjaminmoore.com/bm/colorgallery/embed_color.jsp?colorvalue=rgb%28232%2C%20223%2C%20203%29&colornum=PM-30&colorname=bone%20white&colorhref=http://www.benjaminmoore.com/en-us/paint-color/pm30" id="benjaminMooreIframe"><div style="display:none;"><a href="http://www.benjaminmoore.com/en-us/paint-color/pm30">bone white</a></div></iframe>
 
-<iframe frameborder="0" style="height: 190px; width: 190px; margin-left: 0px;" src="http://www.benjaminmoore.com/bm/colorgallery/embed_color.jsp?colorvalue=rgb%28232%2C%20223%2C%20203%29&colornum=PM-30&colorname=bone%20white&colorhref=http://www.benjaminmoore.com/en-us/paint-color/pm30" id="benjaminMooreIframe"><div style="display:none;"><a href="http://www.benjaminmoore.com/en-us/paint-color/pm30">bone white</a></div></iframe>
-
-<iframe frameborder="0" style="height: 190px; width: 190px; margin-left: 0px;" src="http://www.benjaminmoore.com/bm/colorgallery/embed_color.jsp?colorvalue=rgb%28167%2C%20187%2C%2051%29&colornum=2028-30&colorname=tequila%20lime&colorhref=http://www.benjaminmoore.com/en-us/paint-color/tequilalime" id="benjaminMooreIframe"><div style="display:none;"><a href="http://www.benjaminmoore.com/en-us/paint-color/tequilalime">tequila lime</a></div></iframe>
-
+<iframe frameborder="0" style="height: 190px; width: 180px; margin-left: 0px;" src="http://www.benjaminmoore.com/bm/colorgallery/embed_color.jsp?colorvalue=rgb%28167%2C%20187%2C%2051%29&colornum=2028-30&colorname=tequila%20lime&colorhref=http://www.benjaminmoore.com/en-us/paint-color/tequilalime" id="benjaminMooreIframe"><div style="display:none;"><a href="http://www.benjaminmoore.com/en-us/paint-color/tequilalime">tequila lime</a></div></iframe>
+</div>
 
 <p style="margin-top:1.2em;">
 <img src="https://dl.dropboxusercontent.com/u/113243/pics/shed/post-interior-one.jpg" width="48%" style="float:right" />
