added to resume

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -7,7 +7,7 @@ title: "resume"
   <h1>{{ site.name }}</h1>
 
   <h3>tl;dr</h3>
-  <p>Seasoned programmer with experience building world-class apps. Lately I've been using Node.js with MongoDB and Objective-C for iOS apps. I have written a search engine in C++, and server apps in Java. I love to build stuff.</p>
+  <p>Seasoned programmer with experience building world-class apps. Lately I've been using Node.js with MongoDB and AngularJS and, of course, Objective-C for iOS apps. I have written everything from a high-performance search engine in C++ serving billions of search results, to a crazy game based on a De Stijl painter and once, even an ant colony simulator (using <a href="http://en.wikipedia.org/wiki/Hypercard">Hypercard</a>). I love to build stuff.</p>
 
   <h3>Early Experiences</h3>
   <p>Learned to push-up, sit-up, crawl, walk and talk. All self-taught.</p>
@@ -29,7 +29,7 @@ title: "resume"
   At the time, <a href="http://www.nngroup.com/people/jakob-nielsen/">Jakob Nielsen</a> wrote, <i>“BN is lean and fast. It’s easy to find books here, even if you misspell the author’s name.”</i> Little did he know that I knew he'd review the site, and I knew he'd mis-type his own name to check the results so we made sure that every possible mis-spelling of Jakob and Nielsen returned his books. After I left in 2003 the search engine continued to perform flawlessly for years performing billions of searches.</p>
   <h3>Semandex (2003-2011)</h3>
   <p>After years of commuting from Princeton NJ to NYC everyday I decided to take a local job to be able to spend more time with my daughter. Semandex is a defense contractor mostly dealing with the intelligence branches. I was the principal software engineer and we built up a fantastic team of engineers led by my good friend <a target="_blank" href="http://www.linkedin.com/pub/jeffrey-mershon/2/b07/578">Jeff Mershon.</a> Most of the development was done in Java but eventaully the front-end was built using this "new" thing called AJAX. At the time we used <a href="http://developer.tibco.com/gi/default.jsp">General Interface</a> (before they were bought by Tibco). I maintained a TS/SCI security clearance and if I tell you any more, I'd have to kill you.</p>
-  <h3>Fuzzi Tail (2010-2011)</h3>
+  <h3>Fuzzi Tail (2010-present)</h3>
   <p>In 2010 my brother <a href="http://www.jonarmstrong.com">Jon Armstrong</a> and I started <a href="http://www.fuzzitail.com">FuzziTail</a> and developed <a href="https://itunes.apple.com/app/mondrian/id347927621?mt=8&ign-mpt=uo%3D6">Mondrian</a>, a puzzle game based on the artwork of <a href="http://en.wikipedia.org/wiki/Piet_Mondrian">Piet Mondrian</a>. The game was quite fun to develop and the seemingly simple puzzles turned out to be quite difficult to solve.</p>
   <p>
   <b>"A work of Art"</b><i>"...its character, art style, and terrific gameplay justify the price. Mondrain can rest in peace knowing that his iDevice game has been transformed into a 5-Dimple work of art."</i>
@@ -38,10 +38,16 @@ title: "resume"
   <b>✭✭✭✭ 4 stars</b> <i>"Mondrian is a great game injecting loads of personality, and style into a genre that usually is just associated with blue blocks."</i>
   <br/><b>-- TouchGen.net</b>
   </p>
+  <p>My latest app is <a href="http://syde.me">Syde</a>. Syde is a fun social photo collaboration app where you take half a photo (a Syde), share it publicly, with friends, or privately, and the other person takes the other half of the photo. It's really fun, and a great way to make a connection between people. My original inspiration was the drawing game <a href="http://en.wikipedia.org/wiki/Exquisite_corpse">exquisite corpse</a> that I used to play with my family when I was a kid.
+  </p>
   <h3>CueNotes.com (2012 - present)</h3>
   <p>
   I co-founded <a href="https://www.cuenotes.com">CueNotes.com</a> with my friend <a href="http://www.linkedin.com/in/bendean">Ben Dean</a>. Both of us being musicians, we wanted to develop something of lasting value for the music world. The simple idea around CueNotes is to bring a social experience back to music in the digital age. There was no place on the web for fans, artists, and music lovers to discuss music in a engaging and useful way. CueNotes combines a social network with a concept similar to <a href="http://en.wikipedia.org/wiki/Pop-Up_Video">Popup Video</a>. Artists can contribute their own CueNotes much like they used to in the liner notes of old, but interact with fans in a way that was never possible before.
   <br/><br/>
   I wrote the backend in <a href="http://www.nodejs.org">Node.js</a>, <a href="http://www.mongodb.org">MongoDB</a>, and the inital iOS app in objective-c. Our web-app is written using <a href="http://backbonejs.org">Backbone.js</a> and <a href="http://marionettejs.com/">Marionette</a>.
   </p>
+    <h3>Consulting (2013 - present)</h3>
+  <p>
+  My latest consulting gig is with SiriusXM where I built a web app to showcase their traffic and traffic related data. The app was written in <a href="https://angularjs.org/">AngularJS</a> with a <a href="http://nodejs.org/">NodeJS</a> backend. I really like AngularJS. It's simple, flexible and it makes a lot of stuff soooo easy to do. 
+
 </section>
