--- a/pages/resume.html
+++ b/pages/resume.html
@@ -2,10 +2,11 @@
 layout: layout
 title: "resume"
 ---
-
-<section class="content">
-  <h1>{{ site.name }}</h1>
-
+   
+<!-- <section class="content"> -->
+  <!-- <h1>{{ site.name }}</h1> -->
+<div class="col-sm-8 col-sm-offset-2">
+  <h1>Resume</h1>
   <h3>tl;dr</h3>
   <p>Seasoned programmer with experience building world-class apps. Lately I've been using Node.js with MongoDB and AngularJS and, of course, Objective-C for iOS apps. I have written everything from a high-performance search engine in C++ serving billions of search results, to a crazy game based on a De Stijl painter and once, even an ant colony simulator (using <a href="http://en.wikipedia.org/wiki/Hypercard">Hypercard</a>). I love to build stuff.</p>
 
@@ -50,4 +51,4 @@ title: "resume"
   <p>
   My latest consulting gig is with SiriusXM where I built a web app to showcase their traffic and traffic related data. The app was written in <a href="https://angularjs.org/">AngularJS</a> with a <a href="http://nodejs.org/">NodeJS</a> backend. I really like AngularJS. It's simple, flexible and it makes a lot of stuff soooo easy to do. 
 
-</section>
+<!-- </section> -->
