--- a/_posts/2013-09-03-building-my-home-office.html
+++ b/_posts/2013-09-03-building-my-home-office.html
@@ -3,71 +3,118 @@ layout: post
 title:  "Building my home office"
 date:   2013-09-06 20:05:34
 categories: personal 
+teaser: Everything you ever wanted to know about my home office
 ---
 
-<img src="https://dl.dropboxusercontent.com/u/113243/pics/shed/pre-backyard.jpg" width="48%" style="float:right" />
-<div style="clear:right"/>
-We bought a new house in the winter of 2012. In the backyard were two sheds. Both had electrical run from the house and the one on the left had insulation. So, obviously, my first thought was, "That's my new home office".
 
-<img src="https://dl.dropboxusercontent.com/u/113243/pics/shed/pre-inside.jpg" width="48%" style="float:right" />
-
-<p>
-Here's the original interior of the left shed. As you can see there is some insulation and a couple of outlets, but the windows were single pane and couldn't open and the door was more like a barndoor. 
-</p>
-
-<img src="https://dl.dropboxusercontent.com/u/113243/pics/shed/pre-interior-right.jpg" width="48%" style="float:right;clear:right;" />
-<img src="https://dl.dropboxusercontent.com/u/113243/pics/shed/pre-interior-left.jpg" width="48%" style="float:right" />
-
-<p>
-I ripped out all the shelves, we framed out a new ceiling and I had three separate 15amp circuits installed and some additional outlets off the original circuit. The three 15amp circuits are for an air conditioner/heater, computers, and (possibly) the mini-fridge.
-</p>
-
-<img src="https://dl.dropboxusercontent.com/u/113243/pics/shed/interior-ceiling.jpg" width="48%" style="float:right;" />
-
-<p>
-Then my friend Jeff Mershon and I framed out a new ceiling, new windows and a new door. We ripped the siding off the old door and used it to cover the new framing to the left of the door. Jeff did most of the door framing and damned if it didn't come out close to perfect. Jeff also did the windows and those popped in fairly easy.
-</p>
-
-<div style="clear:both;"/>
-<img src="https://dl.dropboxusercontent.com/u/113243/pics/shed/door2.jpg" width="48%" style="float:right" />
-<img src="https://dl.dropboxusercontent.com/u/113243/pics/shed/door1.jpg" width="48%" style="float:right" />
-<div style="clear:both;"/>
-
-<p>
-<img src="https://dl.dropboxusercontent.com/u/113243/pics/shed/sheetrock-one.jpg" width="48%" style="float:right" />
-Once all of that was done, I put in extra insulation and we sheetrocked it all up. Another friend who is a painter did the mudding, since I'd never done that before.
-</p>
-<p>
-I also ran a CAT6 exterior graded network cable from the house out to the shed since my wireless didn't quite reach out there. I added another wireless router in the shed for extra connectivity.
-</p>
-<p>
-For painting I always wanted to do a chalkboard wall. So the long wall on the right, with no windows, became a full floor to ceiling chalkboard!
-</p>
-<div style="clear:both;margin-top:15px;"/>
-
-<p>
-<img src="https://dl.dropboxusercontent.com/u/113243/pics/shed/exterior-one.jpg" width="48%" style="float:right" />
-Here's the outside. All painted.
-</p>
-<div style="clear:both;margin:15px 0;"/>
-
-Here's the interior color scheme:
-<div>
-<iframe frameborder="0" style="height: 190px; width: 180px; margin-left: 0px;" src="http://www.benjaminmoore.com/bm/colorgallery/embed_color.jsp?colorvalue=rgb%2850%2C%2050%2C%2051%29&colornum=2132-10&colorname=black&colorhref=http://www.benjaminmoore.com/en-us/paint-color/black" id="benjaminMooreIframe"><div style="display:none;"><a href="http://www.benjaminmoore.com/en-us/paint-color/black">black</a></div></iframe>
-
-<iframe frameborder="0" style="height: 190px; width: 180px; margin-left: 0px;" src="http://www.benjaminmoore.com/bm/colorgallery/embed_color.jsp?colorvalue=rgb%28232%2C%20223%2C%20203%29&colornum=PM-30&colorname=bone%20white&colorhref=http://www.benjaminmoore.com/en-us/paint-color/pm30" id="benjaminMooreIframe"><div style="display:none;"><a href="http://www.benjaminmoore.com/en-us/paint-color/pm30">bone white</a></div></iframe>
-
-<iframe frameborder="0" style="height: 190px; width: 180px; margin-left: 0px;" src="http://www.benjaminmoore.com/bm/colorgallery/embed_color.jsp?colorvalue=rgb%28167%2C%20187%2C%2051%29&colornum=2028-30&colorname=tequila%20lime&colorhref=http://www.benjaminmoore.com/en-us/paint-color/tequilalime" id="benjaminMooreIframe"><div style="display:none;"><a href="http://www.benjaminmoore.com/en-us/paint-color/tequilalime">tequila lime</a></div></iframe>
+<div class="row">
+    <div class="col-sm-6">
+        We bought a new house in the winter of 2012. In the backyard were two sheds. Both had electrical run from the house and the one on the left had insulation. So, obviously, my first thought was, "That's my new home office".
+    </div>
+    <div class="col-sm-6">
+        <img class="img-thumbnail thumb" src="https://dl.dropboxusercontent.com/u/113243/pics/shed/pre-backyard.jpg"/>
+    </div>
 </div>
 
-<p style="margin-top:1.2em;">
-<img src="https://dl.dropboxusercontent.com/u/113243/pics/shed/post-interior-one.jpg" width="48%" style="float:right" />
+<div class="row">
+    <div class="col-sm-6">
+        Here's the original interior of the left shed. As you can see there is some insulation and a couple of outlets, but the windows were single pane and couldn't open and the door was more like a barndoor. 
+    </div>
+    <div class="col-sm-6">
+        <img class="img-thumbnail thumb" src="https://dl.dropboxusercontent.com/u/113243/pics/shed/pre-inside.jpg"/>
+    </div>
+</div>
 
-And here is the interior. It's still a work in progress. I have to put in lighting, the floor is only primed at this point, I still have to properly setup my desk with three monitors and of course, the minifridge! 
-</p>
-<p>
-As you can see, Chucho, my dog, has his spot right next to my desk. He <b>loves</b> to come to work with me and sometimes is almost impossible to get him to leave to go back to the house.
-</p>
 
-<div style="clear:both;"/>
+<div class="row">
+    <div class="col-sm-6">
+    </div>
+    <div class="col-sm-6">
+        <img class="img-thumbnail thumb" src="https://dl.dropboxusercontent.com/u/113243/pics/shed/pre-interior-left.jpg"/>
+        <img class="img-thumbnail thumb" src="https://dl.dropboxusercontent.com/u/113243/pics/shed/pre-interior-right.jpg"/>
+    </div>
+</div>
 
+<div class="row">
+    <div class="col-sm-6">
+I ripped out all the shelves, we framed out a new ceiling and I had three separate 15amp circuits installed and some additional outlets off the original circuit. The three 15amp circuits are for an air conditioner/heater, computers, and (possibly) the mini-fridge.
+    </div>
+    <div class="col-sm-6">
+        <img class="img-thumbnail thumb" src="https://dl.dropboxusercontent.com/u/113243/pics/shed/interior-ceiling.jpg"/>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-sm-6">
+Then my friend Jeff Mershon and I framed out a new ceiling, new windows and a new door. We ripped the siding off the old door and used it to cover the new framing to the left of the door. Jeff did most of the door framing and damned if it didn't come out close to perfect. Jeff also did the windows and those popped in fairly easy.
+    </div>
+    <div class="col-sm-6">
+        <img class="img-thumbnail thumb" src="https://dl.dropboxusercontent.com/u/113243/pics/shed/door1.jpg"/>
+        <img class="img-thumbnail thumb" src="https://dl.dropboxusercontent.com/u/113243/pics/shed/door2.jpg"/>
+
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-sm-6">
+        <p>
+            Once all of that was done, I put in extra insulation and we sheetrocked it all up. Another friend who is a painter did the mudding, since I'd never done that before.
+        </p>
+        <p>
+            I also ran a CAT6 exterior graded network cable from the house out to the shed since my wireless didn't quite reach out there. I added another wireless router in the shed for extra connectivity.
+        </p>
+        <p>
+        </p>
+    </div>
+    <div class="col-sm-6">
+        <img class="img-thumbnail thumb" src="https://dl.dropboxusercontent.com/u/113243/pics/shed/sheetrock-one.jpg"/>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-sm-6">
+
+    </div>
+    <div class="col-sm-6">
+
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-sm-6">
+Here's the outside. All painted.
+    </div>
+    <div class="col-sm-6">
+    <img class="img-thumbnail thumb" src="https://dl.dropboxusercontent.com/u/113243/pics/shed/exterior-one.jpg"/>
+
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-sm-6">
+Here's the interior color scheme:
+    </div>
+    <div class="col-sm-6">
+        <iframe frameborder="0" style="height: 190px; width: 180px; margin-left: 0px;" src="http://www.benjaminmoore.com/bm/colorgallery/embed_color.jsp?colorvalue=rgb%2850%2C%2050%2C%2051%29&colornum=2132-10&colorname=black&colorhref=http://www.benjaminmoore.com/en-us/paint-color/black" id="benjaminMooreIframe"><div style="display:none;"><a href="http://www.benjaminmoore.com/en-us/paint-color/black">black</a></div></iframe>
+
+        <iframe frameborder="0" style="height: 190px; width: 180px; margin-left: 0px;" src="http://www.benjaminmoore.com/bm/colorgallery/embed_color.jsp?colorvalue=rgb%28232%2C%20223%2C%20203%29&colornum=PM-30&colorname=bone%20white&colorhref=http://www.benjaminmoore.com/en-us/paint-color/pm30" id="benjaminMooreIframe"><div style="display:none;"><a href="http://www.benjaminmoore.com/en-us/paint-color/pm30">bone white</a></div></iframe>
+
+        <iframe frameborder="0" style="height: 190px; width: 180px; margin-left: 0px;" src="http://www.benjaminmoore.com/bm/colorgallery/embed_color.jsp?colorvalue=rgb%28167%2C%20187%2C%2051%29&colornum=2028-30&colorname=tequila%20lime&colorhref=http://www.benjaminmoore.com/en-us/paint-color/tequilalime" id="benjaminMooreIframe"><div style="display:none;"><a href="http://www.benjaminmoore.com/en-us/paint-color/tequilalime">tequila lime</a></div></iframe>
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="col-sm-6">
+        <p>
+        And here is the interior. It's still a work in progress. I have to put in lighting, the floor is only primed at this point, I still have to properly setup my desk with three monitors and of course, the minifridge! 
+        </p>
+        <p>
+        As you can see, Chucho, my dog, has his spot right next to my desk. He <b>loves</b> to come to work with me and sometimes is almost impossible to get him to leave to go back to the house.
+        </p>
+    </div>
+    <div class="col-sm-6">
+        <img class="img-thumbnail thumb" src="https://dl.dropboxusercontent.com/u/113243/pics/shed/post-interior-one.jpg"/>
+
+    </div>
+</div>
