--- a/index.html
+++ b/index.html
@@ -1,14 +1,32 @@
 ---
 layout: layout
-title: "Posts"
+title: "JefArmstrong"
 ---
 
-<section class="content">
-  <ul class="listing">
-    {% for post in site.posts %}
-    <li>
-      <span>{{ post.date | date: "%B %e, %Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a>
-    </li>
-    {% endfor %}
-  </ul>
-</section>
+<div class="row">
+<div class="col-sm-5 col-sm-offset-1 text-muted">
+    <h1>Need an <strong>iOS</strong> Developer?</h1>
+    <p>
+        My name is Jef Armstrong. I've been a developer for over 25 years. I've done everything from writing touch-screen kiosks for music/video/book stores, developing a high-performance search engine for barnesandnoble.com in C++, to writing iOS games.
+    </p>
+    <p style="margin-bottom:30px;">
+        I've written two iOS games, a social music app, a social photo sharing app, and helped add features or bug fixes to many more.
+    </p>
+    <h1>Need a <strong>node.js</strong> backend?</h1>
+    <p>
+        I can do that too. I've written several backend server api's for mobile apps, all in node.js with MongoDB databases. I usually run them on Heroku or AWS directly. I have also written several Angular.js front-end apps for various clients.
+    </p>
+    <p>
+        Feel free to <a href="/pages/contact.html"><b>contact me</b></a> about your project and lets talk about how I can help make it happen.
+    </p>
+    <p>
+        <form action="/pages/contact.html">
+            <input type="submit" class="btn btn-success" value="Contact Me"/>
+        </form>
+    </p>
+
+</div>
+<div class="col-sm-5">
+    <img class="img-thumbnail" src="/images/portfolio-cuenotes-feed.png"/>
+</div>
+</div>
