added hashtags to portfolio page, home page image links to cuenotes on portfolio

--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@ title: "JefArmstrong"
 
 </div>
 <div class="col-sm-5">
-    <img class="img-thumbnail" src="/images/portfolio-cuenotes-feed.png"/>
+    <a href="/pages/portfolio.html#cuenotes"><img class="img-thumbnail" src="/images/portfolio-cuenotes-feed.png"/></a>
 </div>
 </div>
