--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -6,6 +6,7 @@ title: "Portfolio"
 <div class="col col-sm-8 col-sm-offset-2">
     <h1>Portfolio</h1>
     
+    <a name="mondrian"/>
     <div class="row">
         <div class="col-sm-6">
             <img class="img-thumbnail" src="/images/portfolio-mondrian-comment.png"/>
@@ -36,6 +37,7 @@ title: "Portfolio"
         </div>
     </div>
 
+    <a name="cuenotes"/>
     <div class="row row-space">
         <div class="col-sm-6">
             <img class="img-thumbnail" src="/images/portfolio-cuenotes-feed.png"/>
@@ -51,6 +53,7 @@ title: "Portfolio"
         </div>
     </div>
 
+    <a name="syde"/>
     <div class="row row-space">
         <div class="col-sm-6">
             <img class="img-thumbnail" src="/images/portfolio-syde-image1.jpeg"/>
@@ -66,6 +69,7 @@ title: "Portfolio"
         </div>
     </div>
 
+
     <div class="row row-space">
         <div class="col-sm-6">
             <video id="qu-video" src="/images/portfolio-qu.m4v" controls/>
@@ -76,6 +80,7 @@ title: "Portfolio"
         </div>
     </div>
 
+    <a name="tapnastics"/>
     <div class="row row-space">
         <div class="col-sm-6">
             <img class="img-thumbnail" src="/images/portfolio-tapnastics-beats.jpeg"/>
