updated home page, fixed portfolio

--- a/index.html
+++ b/index.html
@@ -4,29 +4,56 @@ title: "JefArmstrong"
 ---
 
 <div class="row">
-<div class="col-sm-5 col-sm-offset-1 text-muted">
-    <h1>Need an <strong>iOS</strong> Developer?</h1>
-    <p>
-        My name is Jef Armstrong. I've been a developer for over 25 years. I've done everything from writing touch-screen kiosks for music/video/book stores, developing a high-performance search engine for barnesandnoble.com in C++, to writing iOS games.
-    </p>
-    <p style="margin-bottom:30px;">
-        I've written two iOS games, a social music app, a social photo sharing app, and helped add features or bug fixes to many more.
-    </p>
-    <h1>Need a <strong>node.js</strong> backend?</h1>
-    <p>
-        I can do that too. I've written several backend server api's for mobile apps, all in node.js with MongoDB databases. I usually run them on Heroku or AWS directly. I have also written several Angular.js front-end apps for various clients.
-    </p>
-    <p>
-        Feel free to <a href="/pages/contact.html"><b>contact me</b></a> about your project and lets talk about how I can help make it happen.
-    </p>
-    <p>
-        <form action="/pages/contact.html">
-            <input type="submit" class="btn btn-success" value="Contact Me"/>
-        </form>
-    </p>
+<div class="col-sm-10 col-sm-offset-1">
+<div class="jumbotron" style="background-color:#C8F7C5;margin-top:50px;">
 
+    
+    <div class="row">
+
+        <div class="col-sm-6 xxcol-sm-offset-1 xxtext-muted" xxstyle="color:#fff;">
+            <h2><strong>Need an iOS App?</strong></h2>
+            <p>
+                I've been a developer for over 25 years. I've done everything from writing touch-screen kiosks for music/video/book stores, developing a high-performance search engine for barnesandnoble.com in C++, to writing iOS games.
+            </p>
+            <p>
+                I've written two iOS games, a social music app, a social photo sharing app, and helped add features or bug fixes to many more.
+            </p>
+            <p>
+                Check out my <a href="/pages/portfolio.html">portfolio</a> for examples.
+            </p>
+            <p>
+                <form action="/pages/contact.html">
+                    <input type="submit" class="btn btn-success" value="Contact Me"/>
+                </form>
+            </p>            
+        </div>
+        <div class="col-sm-6 xxtext-muted">
+            <h2><strong>Need a backend API or WebApp?</strong></h2>
+            <p>
+                I can do that too. I've written several backend server api's for mobile apps, all in node.js with MongoDB databases. I usually run them on Heroku or AWS directly. I have also written several Angular.js front-end apps for various clients.
+            </p>
+            <p>
+                Some of the technologies I've been using recently:
+                <ul>
+                    <li>Node.js</li>
+                    <li>MongoDB</li>
+                    <li>Express</li>
+                    <li>MEAN stack</li>
+                    <li>Angular.js</li>
+                    <li>Bootstrap</li>
+                </ul>
+            </p>
+            <p>
+                <form action="/pages/contact.html">
+                    <input type="submit" class="btn btn-success" value="Contact Me"/>
+                </form>
+            </p>
+        </div>
+    <!--     <div class="col-sm-5">
+            <a href="/pages/portfolio.html#cuenotes"><img class="img-thumbnail" src="/images/portfolio-cuenotes-feed.png"/></a>
+        </div>
+     -->
+    </div>
 </div>
-<div class="col-sm-5">
-    <a href="/pages/portfolio.html#cuenotes"><img class="img-thumbnail" src="/images/portfolio-cuenotes-feed.png"/></a>
 </div>
 </div>
