--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -6,7 +6,7 @@ title: "Portfolio"
 <div class="col col-sm-8 col-sm-offset-2">
     <h1>Portfolio</h1>
     
-    <a name="mondrian"/>
+    <a name="mondrian"></a>
     <div class="row">
         <div class="col-sm-6">
             <img class="img-thumbnail" src="/images/portfolio-mondrian-comment.png"/>
@@ -37,7 +37,7 @@ title: "Portfolio"
         </div>
     </div>
 
-    <a name="cuenotes"/>
+    <a name="cuenotes"></a>
     <div class="row row-space">
         <div class="col-sm-6">
             <img class="img-thumbnail" src="/images/portfolio-cuenotes-feed.png"/>
@@ -53,7 +53,7 @@ title: "Portfolio"
         </div>
     </div>
 
-    <a name="syde"/>
+    <a name="syde"></a>
     <div class="row row-space">
         <div class="col-sm-6">
             <img class="img-thumbnail" src="/images/portfolio-syde-image1.jpeg"/>
@@ -69,7 +69,7 @@ title: "Portfolio"
         </div>
     </div>
 
-
+    <a name="qu"></a>
     <div class="row row-space">
         <div class="col-sm-6">
             <video id="qu-video" src="/images/portfolio-qu.m4v" controls/>
@@ -80,7 +80,7 @@ title: "Portfolio"
         </div>
     </div>
 
-    <a name="tapnastics"/>
+    <a name="tapnastics"></a>
     <div class="row row-space">
         <div class="col-sm-6">
             <img class="img-thumbnail" src="/images/portfolio-tapnastics-beats.jpeg"/>
