added workspace image to home page, added parallax.js

--- a/index.html
+++ b/index.html
@@ -2,52 +2,68 @@
 layout: layout
 title: "JefArmstrong"
 ---
+<div class="row">
+    <div class="parallax-window" data-parallax="scroll" data-image-src="/images/workspace.png" data-speed="0.2" style="min-height:700px;background:transparent;">
+        <div class="col-sm-6 col-sm-offset-3">
+            <div class="jumbotron text-center " style="min-height:500px;margin-top:30px;background:rgba(0,0,0,0.25);">
+                <h1 class="title">Jef Armstrong</h1>
+                <h1><small>iOS, Node.js, Angular.js Developer</small></h1>
+                <div style="margin-top:50px;">
+                    <a href="/pages/portfolio.html" class="btn btn-success">Portfolio</a>
+                    <a href="/pages/resume.html" class="btn btn-success">Resume</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
+
 
 <div class="row">
 <div class="col-sm-10 col-sm-offset-1">
-<div class="jumbotron" style="background-color:#C8F7C5;margin-top:50px;">
-
-    
     <div class="row">
-
-        <div class="col-sm-6 xxcol-sm-offset-1 xxtext-muted" xxstyle="color:#fff;">
-            <h2><strong>Need an iOS App?</strong></h2>
-            <p>
-                I've been a developer for over 25 years. I've done everything from writing touch-screen kiosks for music/video/book stores, developing a high-performance search engine for barnesandnoble.com in C++, to writing iOS games.
-            </p>
-            <p>
-                I've written two iOS games, a social music app, a social photo sharing app, and helped add features or bug fixes to many more.
-            </p>
-            <p>
-                Check out my <a href="/pages/portfolio.html">portfolio</a> for examples.
-            </p>
-            <p>
-                <form action="/pages/contact.html">
-                    <input type="submit" class="btn btn-success" value="Contact Me"/>
-                </form>
-            </p>            
+        <div class="col-sm-6">
+            <div class="jumbotron" style="background-color:#C8F7C5;margin-top:50px;">
+                <h2><strong>Need an iOS App?</strong></h2>
+                <p>
+                    I've been a developer for over 25 years. I've done everything from writing touch-screen kiosks for music/video/book stores, developing a high-performance search engine for barnesandnoble.com in C++, to writing iOS games.
+                </p>
+                <p>
+                    I've written two iOS games, a social music app, a social photo sharing app, and helped add features or bug fixes to many more.
+                </p>
+                <p>
+                    Check out my <a href="/pages/portfolio.html">portfolio</a> for examples.
+                </p>
+                <p>
+                    <form action="/pages/contact.html">
+                        <input type="submit" class="btn btn-success" value="Contact Me"/>
+                    </form>
+                </p>            
+            </div>
         </div>
-        <div class="col-sm-6 xxtext-muted">
-            <h2><strong>Need a backend API or WebApp?</strong></h2>
-            <p>
-                I can do that too. I've written several backend server api's for mobile apps, all in node.js with MongoDB databases. I usually run them on Heroku or AWS directly. I have also written several Angular.js front-end apps for various clients.
-            </p>
-            <p>
-                Some of the technologies I've been using recently:
-                <ul>
-                    <li>Node.js</li>
-                    <li>MongoDB</li>
-                    <li>Express</li>
-                    <li>MEAN stack</li>
-                    <li>Angular.js</li>
-                    <li>Bootstrap</li>
-                </ul>
-            </p>
-            <p>
-                <form action="/pages/contact.html">
-                    <input type="submit" class="btn btn-success" value="Contact Me"/>
-                </form>
-            </p>
+        <div class="col-sm-6">
+            <div class="jumbotron" style="background-color:#C8F7C5;margin-top:50px;">
+                <h2><strong>Need a backend API or WebApp?</strong></h2>
+                <p>
+                    I can do that too. I've written several backend server api's for mobile apps, all in node.js with MongoDB databases. I usually run them on Heroku or AWS directly. I have also written several Angular.js front-end apps for various clients.
+                </p>
+                <p>
+                    Some of the technologies I've been using recently:
+                    <ul>
+                        <li>Node.js</li>
+                        <li>MongoDB</li>
+                        <li>Express</li>
+                        <li>MEAN stack</li>
+                        <li>Angular.js</li>
+                        <li>Bootstrap</li>
+                    </ul>
+                </p>
+                <p>
+                    <form action="/pages/contact.html">
+                        <input type="submit" class="btn btn-success" value="Contact Me"/>
+                    </form>
+                </p>
+            </div>
         </div>
     <!--     <div class="col-sm-5">
             <a href="/pages/portfolio.html#cuenotes"><img class="img-thumbnail" src="/images/portfolio-cuenotes-feed.png"/></a>
