added a footer, cleaned up blog posts

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ title: "JefArmstrong"
 <div class="row">
     <div class="parallax-window" data-parallax="scroll" data-image-src="/images/workspace.png" data-speed="0.2" style="min-height:700px;background:transparent;">
         <div class="col-sm-6 col-sm-offset-3">
-            <div class="jumbotron text-center " style="min-height:500px;margin-top:30px;background:rgba(0,0,0,0.25);">
+            <div class="jumbotron text-center home" style="min-height:500px;margin-top:30px;background:rgba(0,0,0,0.25);">
                 <h1 class="title">Jef Armstrong</h1>
-                <h1><small>iOS, Node.js, Angular.js Developer</small></h1>
+                <h1><small>iOS, Node.js, Angular.js Developer (<a href="#hire">for hire</a>)</small></h1>
                 <div style="margin-top:50px;">
                     <a href="/pages/portfolio.html" class="btn btn-success">Portfolio</a>
                     <a href="/pages/resume.html" class="btn btn-success">Resume</a>
@@ -23,6 +23,7 @@ title: "JefArmstrong"
 <div class="col-sm-10 col-sm-offset-1">
     <div class="row">
         <div class="col-sm-6">
+            <a name="hire"></a>
             <div class="jumbotron" style="background-color:#C8F7C5;margin-top:50px;">
                 <h2><strong>Need an iOS App?</strong></h2>
                 <p>
