updated home image to jpeg 2000

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: layout
 title: "JefArmstrong"
 ---
 <div class="row">
-    <div class="parallax-window" data-parallax="scroll" data-image-src="/images/workspace.jpg" data-speed="0.2" style="min-height:700px;background:transparent;">
+    <div class="parallax-window" data-parallax="scroll" data-image-src="/images/workspace.jp2" data-speed="0.2" style="min-height:700px;background:transparent;">
         <div class="col-sm-6 col-sm-offset-3">
             <div class="jumbotron text-center home" style="min-height:500px;margin-top:30px;background:rgba(0,0,0,0.25);">
                 <h1 class="title">Jef Armstrong</h1>
